# learning-aata

./: .gitignore  AGENTS.md  Justfile  README.md  opencode.jsonc  pyproject.toml
.opencode/agents/: aata-pedagogy.md  math-pedagogy.md
.opencode/commands/: assess-solution.md  chapter-plan.md  exit-check.md  hint.md  transfer-problem.md
.opencode/instructions/: aata-agent-router.md  math-agent-router.md
.opencode/skills/aata-code-exercises/: SKILL.md
.opencode/skills/aata-study-planning/: SKILL.md
.opencode/skills/math-computational-exercises/: SKILL.md
.opencode/skills/math-programming-exercises/: SKILL.md
.opencode/skills/math-solution-assessment/: SKILL.md
.pi/: APPEND_SYSTEM.md
.pi/prompts/: assess-solution.md  chapter-plan.md  exit-check.md  hint.md  transfer-problem.md
.pi/skills/math-study-planning/: SKILL.md
.pi/skills/math-tutoring/: SKILL.md
code/: README.md
code/python/exercises/: ch03_groups.py
docs/: agent-harnesses.md  pedagogy-for-tutoring.md  workflow.md
notes/: README.md
references/: README.md
references/aata/: README.md
references/courses/pitt-math0430/: README.md
sage/: README.md
studies/: README.md  active.md
studies/judson-aata/: pedagogy-overrides.md  profile.md  source-priority.md  workflow.md
studies/judson-aata/editions/: 2021-to-current.md  README.md
studies/judson-aata/exercises/: README.md  index.md  verification.md
studies/judson-aata/scripts/: fetch_references.py  update_aata_diff.sh
studies/judson-aata/state/: README.md  code-exercises.md  progress.md
tracking/: code-exercises.md
(+2 files in other folders)
