[project]
name = "tooter"
version = "0.1.0"
description = "Agentic tutor and study workspace for mathematics texts with reusable pedagogy harnesses."
requires-python = ">=3.12"
dependencies = [
  "sympy>=1.14",
]

[dependency-groups]
dev = [
  "hypothesis>=6.131",
  "pytest>=8.3",
  "ruff>=0.11",
]

[tool.uv]
cache-dir = ".uv-cache"
package = false

[tool.pytest.ini_options]
pythonpath = ["studies/judson-aata/code/python"]
testpaths = ["studies/judson-aata/code/python/tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = [
  "studies/judson-aata/code/python/exercises",
  "studies/judson-aata/code/python/tests",
  "studies/judson-aata/scripts",
]
extend-exclude = [".cache", ".uv-cache", ".venv", "references"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
